--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -18,6 +18,7 @@
     <script src="../vendor/bootstrap-table/bootstrap-table.min.js"></script>
     <script src="../vendor/echarts/echarts.min.js"></script>
     <script src="../vendor/html2canvas/html2canvas.min.js"></script>
+    <script src="../vendor/js-md5/md5.min.js"></script>
     <script src="../js/GF_logistics_function.js"></script>
     <script src="../js/GF_logistics_input.js"></script>
     <script src="../js/Quick_Sort.js"></script>
@@ -33,6 +34,7 @@
     <script src="../js/GF_logistics_FineTuning.js"></script>
     <script src="../js/GF_logistics_MissionTable.js"></script>
     <script src="../js/GF_logistics_PlanDetails.js"></script>
+    <script src="../js/GF_logistics_Saved.js"></script>
 </head>
 
 <body>
@@ -95,7 +97,23 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="alert alert-warning" role="alert" id="description" style="color:#000000"></div>
-                        <div id="localstorageDoesNotWork" class=""></div>
+                        <div class="alert alert-danger" id="localstorageDoesNotWork" style="color:#000000"></div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="alert" style="background-color: #F5F5F5;">
+                            <div class="form-group input-group" style="margin-bottom: 0px; width:100%; max-width: 320px;">
+                                <input type="text" class="form-control" style="min-width: 140px;"
+                                    id="Config_input" value="" onclick="this.select()">
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-default"
+                                        id="Config_importButton" title="">
+                                    <span class="glyphicon glyphicon-import"
+                                        style="top: 2px;" /></button>
+                                    <button type="button" class="btn btn-default" id="Config_export" title=""><span class="glyphicon glyphicon-export"
+                                        style="top: 2px;"></span></button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -275,10 +293,62 @@
                                     </div>
                                 </div>
                                 <div id="Saved" class="panel-collapse collapse" aria-expanded="false">
-                                    <div class="table-responsive">
+                                    <div class="table-responsive" style="max-height: 527px;">
                                         <table class="table table-responsive text-nowrap table-condensed" style="margin-bottom: 0px; text-align: center; cursor: default;">
                                             <tbody id="Saved_Body">
-                                                <tr><td id="NoSaved" style="display: none;"></td></tr>
+                                                <tr id="importSaved">
+                                                    <td colspan=5>
+                                                        <div class="form-group input-group" style="margin-bottom: 0px; width:100%; max-width: 320px;">
+                                                            <input type="text" class="form-control" style="min-width: 140px;"
+                                                                id="importSaved_input" value="" onclick="this.select()">
+                                                            <div class="input-group-btn">
+                                                                <button type="button" class="btn btn-default"
+                                                                    id="importSaved_importButton" title="">
+                                                                <span class="glyphicon glyphicon-import"
+                                                                    style="top: 2px;" /></button>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr><td id="NoSaved" colspan=5></td></tr>
+                                                <!-- <tr>
+                                                    <td><button type="button" class="btn btn-default"
+                                                        id="test2" title="" style="background-color: #88E063;">
+                                                        <span class="glyphicon glyphicon-ok"
+                                                            style="top: 2px;" /></button></td>
+                                                    <td>
+                                                        <div class="form-group input-group" style="margin-bottom: 0px;">
+                                                            <input type="text" class="form-control" style="min-width: 140px;cursor: default;"
+                                                            id="test" value="123" onclick="this.select()" disabled="disabled">
+                                                            <div class="input-group-btn">
+                                                                <button type="button" class="btn btn-default"
+                                                                id="test2" title="">
+                                                                <span class="glyphicon glyphicon-pencil"
+                                                                    style="top: 2px;" /></button>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="btn-group" style="min-width: 80px;">
+                                                            <button type="button" class="btn btn-default"
+                                                                id="test2" title="">
+                                                                <span class="glyphicon glyphicon-arrow-up"
+                                                                    style="top: 2px;" /></button>
+                                                            <button type="button" class="btn btn-default"
+                                                                id="test2" title="">
+                                                                <span class="glyphicon glyphicon-arrow-down"
+                                                                    style="top: 2px;" /></button>
+                                                        </div>
+                                                    </td>
+                                                    <td><button type="button" class="btn btn-default"
+                                                        id="test2" title="">
+                                                        <span class="glyphicon glyphicon-export"
+                                                            style="top: 2px;" /></button></td>
+                                                    <td><button type="button" class="btn btn-default"
+                                                        id="test3" title="" style="background-color: #F48380;">
+                                                        <span class="glyphicon glyphicon-trash"
+                                                            style="top: 2px;" /></button></td>
+                                                </tr> -->
                                             </tbody>
                                         </table>
                                     </div>
