--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -18,6 +18,7 @@
     <script src="../vendor/bootstrap-table/bootstrap-table.min.js"></script>
     <script src="../vendor/echarts/echarts.min.js"></script>
     <script src="../vendor/html2canvas/html2canvas.min.js"></script>
+    <script src="../vendor/js-sha1/sha1.min.js"></script>
     <script src="../vendor/js-md5/md5.min.js"></script>
     <script src="../js/GF_logistics_function.js"></script>
     <script src="../js/GF_logistics_input.js"></script>
