--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -260,8 +260,8 @@
                                         <div id="setTargetButton"></div>
                                         <div slider style="margin-top: 5px; margin-bottom: 35px;">
                                             <label id="ContractWeight_label" style="width:100%;">
-                                                <span id="ContractWeight_notImportant" style="font-weight: normal;">契约不重要</span>
-                                                <span id="ContractWeight_Important" style="float: right; font-weight: normal;">契约重要</span>
+                                                <span id="ContractWeight_notImportant" style="font-weight: normal;"></span>
+                                                <span id="ContractWeight_Important" style="float: right; font-weight: normal;"></span>
                                             </label>
                                             <div>
                                                 <div inverse-left style="width:100%;"></div>
