--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -299,7 +299,7 @@
                                     </div>
                                 </div>
                                 <div id="Saved" class="panel-collapse collapse" aria-expanded="false">
-                                    <div class="table-responsive" style="max-height: 527px;">
+                                    <div class="table-responsive" style="max-height: 330px; overflow-y: auto; margin-bottom: 0;">
                                         <table class="table table-responsive text-nowrap table-condensed" style="margin-bottom: 0px; text-align: center; cursor: default;">
                                             <tbody id="Saved_Body">
                                                 <tr id="importSaved">
@@ -330,9 +330,10 @@
                                 </div>
                                 <div id="MissionTable_panel" class="panel-collapse collapse in" aria-expanded="true">
                                     <div class="panel-body" style="padding-left: 0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;">
-                                        <div class="table-responsive" style="max-height: 400px;">
+                                        <div class="table-responsive" style="max-height: 400px; overflow-y: auto; margin-bottom: 0;">
                                             <table class="table table-responsive text-nowrap table-condensed" style="text-align: center; margin-bottom: 0;">
                                                 <thead>
+                                                    <tr>
                                                     <th id="MissionTable_head_Mission" tabindex="0" style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;"></th>
                                                     <th id="MissionTable_head_Manp"    tabindex="0" style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;"></th>
                                                     <th id="MissionTable_head_Ammu"    tabindex="0" style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;"></th>
@@ -343,6 +344,7 @@
                                                     <th id="MissionTable_head_QPro"    tabindex="0" style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;"></th>
                                                     <th id="MissionTable_head_QRes"    tabindex="0" style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;"></th>
                                                     <th id="MissionTable_head_Time"    tabindex="0" style="text-align: center; width: 10%; position: sticky; top: 0; background: white;box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); cursor:pointer;"></th>
+                                                    </tr>
                                                 </thead>
                                                 <tbody id="MissionTable_tbody"></tbody>
                                             </table>
@@ -354,7 +356,7 @@
                         <div class="panel panel-default" style="max-width: 582px;">
                             <div class="panel-heading" id="PlanDetailsTitle" style="cursor: default;"></div>
                             <div class="panel-body" style="padding-left: 0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;">
-                                <div class="table-responsive">
+                                <div class="table-responsive" style="margin-bottom: 0;">
                                     <table class="table table-responsive text-nowrap table-condensed" style="margin-bottom: 0px; width: 580px; font-size: 13px; text-align: center; cursor: default;" id="PlanDetails">
                                         <tbody>
                                             <tr>
